added graphic to demo

--- a/Demo_Polynomial_Regression.ipynb
+++ b/Demo_Polynomial_Regression.ipynb
@@ -86,11 +86,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Let's plot our training data (blue points) and see what our network predicts now that it is trained (red curve)"
+   ]
   },
   {
    "cell_type": "code",
