removed unused import

--- a/Demo_Polynomial_Regression.ipynb
+++ b/Demo_Polynomial_Regression.ipynb
@@ -2,15 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import AlgPoly as ap\n",
     "import numpy as np\n",
     "import PolyNN\n",
-    "import matplotlib.pyplot as plt\n",
-    "import math"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
